# PictureEdit

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/cn/zgy/pictureedit/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/cn/zgy/pictureedit/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/cn/zgy/pictureedit/: ExampleUnitTest.kt
picture/: CMakeLists.txt  build.gradle
picture-kotlin/: CMakeLists.txt  build.gradle
picture-kotlin/src/main/: AndroidManifest.xml
picture-kotlin/src/main/cpp/: gauss.h  picture-edit.cpp
picture-kotlin/src/main/java/cn/zgy/picture/: Compress.kt  PictureEdit.kt  PictureUtils.kt
picture/src/androidTest/java/cn/zgy/picture/: ExampleInstrumentedTest.java
picture/src/main/: AndroidManifest.xml
picture/src/main/cpp/: compress.cpp  compress.h  gauss.cpp  gauss.h  picture-edit.cpp
picture/src/main/java/cn/zgy/picture/: Compress.java  Compress.kt  PictureEdit.java  PictureEdit.kt  PictureUtils.java  PictureUtils.kt
picture/src/test/java/cn/zgy/picture/: ExampleUnitTest.java
